Add validations, change jwt token realisation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=finance-tracker-backend
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-token.signing.key=${JWT_SIGNING_KEY}
+# JWT Configuration
+jwt.signing-key=${JWT_SIGNING_KEY}
+jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
+jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
+
+# Active profile
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
