--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,18 @@ jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
 
 # Active profile
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
+management.info.env.enabled=true
+
+# OpenAPI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
