--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
 # Active profile
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
+# Development mode (enables dev-token endpoint)
+app.dev-mode=${DEV_MODE:true}
+
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
