--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,23 +5,20 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 # JWT Configuration
 jwt.signing-key=${JWT_SIGNING_KEY}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
 jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
-
-# Active profile
-spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-
 # Development mode (enables dev-token endpoint)
 app.dev-mode=${DEV_MODE:true}
-
+spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_ENABLED}
+spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_ENABLED}
+spring.devtools.restart.poll-interval=${SPRING_DEVTOOLS_RESTART_POLL_INTERVAL}
+spring.devtools.restart.quiet-period=${SPRING_DEVTOOLS_RESTART_QUIET_PERIOD}
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 management.info.env.enabled=true
-
 # OpenAPI Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
@@ -31,3 +28,14 @@ springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+spring.data.redis.timeout=2000ms
+spring.data.redis.jedis.pool.max-active=8
+spring.data.redis.jedis.pool.max-wait=-1ms
+spring.data.redis.jedis.pool.max-idle=8
+spring.data.redis.jedis.pool.min-idle=0
+spring.cache.type=redis
+spring.cache.redis.time-to-live=1800000
+spring.data.redis.repositories.enabled=false
