--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_ENABLED}
 spring.devtools.restart.poll-interval=${SPRING_DEVTOOLS_RESTART_POLL_INTERVAL}
 spring.devtools.restart.quiet-period=${SPRING_DEVTOOLS_RESTART_QUIET_PERIOD}
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics,env,loggers,beans,mappings
 management.endpoint.health.show-details=when-authorized
 management.info.env.enabled=true
 # OpenAPI Configuration
