--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jwt.signing-key=${JWT_SIGNING_KEY}
 jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
 jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
 # Development mode (enables dev-token endpoint)
-app.dev-mode=${DEV_MODE:true}
+debug=${DEBUG:false}
 spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_ENABLED}
 spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_ENABLED}
 spring.devtools.restart.poll-interval=${SPRING_DEVTOOLS_RESTART_POLL_INTERVAL}
