Add Auto-Tagging Rules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,4 @@ spring.data.redis.jedis.pool.min-idle=0
 spring.cache.type=redis
 spring.cache.redis.time-to-live=1800000
 spring.data.redis.repositories.enabled=false
+app.tagging.batch-size=1000
