Fix Docker setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,10 +10,10 @@ jwt.expiration-ms=${JWT_EXPIRATION_MS:86400000}
 jwt.refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS:604800000}
 # Development mode (enables dev-token endpoint)
 debug=${DEBUG:false}
-spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_ENABLED}
-spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_ENABLED}
-spring.devtools.restart.poll-interval=${SPRING_DEVTOOLS_RESTART_POLL_INTERVAL}
-spring.devtools.restart.quiet-period=${SPRING_DEVTOOLS_RESTART_QUIET_PERIOD}
+#spring.devtools.restart.enabled=${SPRING_DEVTOOLS_RESTART_ENABLED}
+#spring.devtools.livereload.enabled=${SPRING_DEVTOOLS_LIVERELOAD_ENABLED}
+#spring.devtools.restart.poll-interval=${SPRING_DEVTOOLS_RESTART_POLL_INTERVAL}
+#spring.devtools.restart.quiet-period=${SPRING_DEVTOOLS_RESTART_QUIET_PERIOD}
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info,metrics,env,loggers,beans,mappings
 management.endpoint.health.show-details=when-authorized
